Bug 88786 - Radeon Hawaii crash on a 32-bit kernel
Summary: Radeon Hawaii crash on a 32-bit kernel
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium major
Assignee: Default DRI bug account
QA Contact: Woody Suwalski
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 89072
  Show dependency treegraph
 
Reported: 2015-01-25 14:04 UTC by Woody Suwalski
Modified: 2015-02-11 00:45 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg booted with drm.debug (74.94 KB, text/plain)
2015-01-25 14:04 UTC, Woody Suwalski
no flags Details
Xorg log - uneventfull - stops at DRM (2 bytes, text/plain)
2015-01-25 14:05 UTC, Woody Suwalski
no flags Details
Kernel config 32-bit, all DRM built in (115.03 KB, text/plain)
2015-01-25 14:07 UTC, Woody Suwalski
no flags Details
Xorg log - uneventfull - stops at DRM (2.92 KB, text/plain)
2015-01-25 14:09 UTC, Woody Suwalski
no flags Details
lspci -vvnn (25.92 KB, text/plain)
2015-01-25 14:51 UTC, Woody Suwalski
no flags Details
dmesg for 64bit kernel, no Radeon crash (61.69 KB, text/plain)
2015-01-28 01:12 UTC, Woody Suwalski
no flags Details
Xorg log 64bit (67.09 KB, text/plain)
2015-01-28 01:21 UTC, Woody Suwalski
no flags Details
possible fix (1.34 KB, patch)
2015-01-28 19:40 UTC, Alex Deucher
no flags Details | Splinter Review
dmesg with new crash on a patched kernel (57.05 KB, text/plain)
2015-01-28 23:06 UTC, Woody Suwalski
no flags Details
possible fix (1.81 KB, patch)
2015-01-29 15:34 UTC, Alex Deucher
no flags Details | Splinter Review
Yet another radeon crash with the new patch (65.96 KB, text/plain)
2015-01-30 04:48 UTC, Woody Suwalski
no flags Details
possible fix (2.44 KB, patch)
2015-01-30 14:26 UTC, Alex Deucher
no flags Details | Splinter Review
dmesg with the latest patch, system is functional now (54.93 KB, text/plain)
2015-01-31 17:39 UTC, Woody Suwalski
no flags Details

Description Woody Suwalski 2015-01-25 14:04:16 UTC
Created attachment 112799 [details]
dmesg booted with drm.debug

The new MSI Hawaii board, used single or 2-headed.
The crash in 
[    5.654006] kernel BUG at drivers/gpu/drm/radeon/radeon_sa.c:321!
[    5.654008] invalid opcode: 0000 [#1] PREEMPT SMP 

The crash is 100% repeatable. The system will boot OK to X with radeon.modeset=0.
The kernel has added trace to verify the firmware requested.

Unclear about 64-bit behavior, since I am booting a live USB distro.
Distro based on Debian Jessie, with
X.Org X Server 1.16.2.901 (1.16.3 RC 1)
Release Date: 2014-12-09
Comment 1 Woody Suwalski 2015-01-25 14:05:55 UTC
Created attachment 112800 [details]
Xorg log - uneventfull - stops at DRM
Comment 2 Woody Suwalski 2015-01-25 14:07:33 UTC
Created attachment 112801 [details]
Kernel config 32-bit, all DRM built in
Comment 3 Woody Suwalski 2015-01-25 14:09:29 UTC
Created attachment 112802 [details]
Xorg log - uneventfull - stops at DRM
Comment 4 Woody Suwalski 2015-01-25 14:51:49 UTC
Created attachment 112805 [details]
lspci -vvnn
Comment 5 Woody Suwalski 2015-01-28 01:12:41 UTC
Created attachment 112895 [details]
dmesg for 64bit kernel, no Radeon crash

dmesg Ubuntu 14.10 AMD64
Comment 6 Woody Suwalski 2015-01-28 01:21:40 UTC
Created attachment 112898 [details]
Xorg log 64bit
Comment 7 Woody Suwalski 2015-01-28 01:22:45 UTC
Added files from a successful 64-bit kernel.
Comment 8 Alex Deucher 2015-01-28 19:40:26 UTC
Created attachment 112919 [details] [review]
possible fix

This patch will fix the crash you are seeing on 32 bit.  However it won't fix the fact the that acceleration does not seem to initialized properly.
Comment 9 Woody Suwalski 2015-01-28 23:06:19 UTC
Created attachment 112924 [details]
dmesg with new crash on a patched kernel

With the patch, the original crash is not happening anymore.
However Radeon still crashes, now in radeon_driver_postclose_kms.
Comment 10 Alex Deucher 2015-01-29 15:34:44 UTC
Created attachment 112951 [details] [review]
possible fix

This updated patch should take care of it.
Comment 11 Woody Suwalski 2015-01-30 04:48:01 UTC
Created attachment 112957 [details]
Yet another radeon crash with the new patch

The new patch is causing black screen and no VTs.
Comment 12 Alex Deucher 2015-01-30 14:26:51 UTC
Created attachment 112975 [details] [review]
possible fix

One more try...
Comment 13 Woody Suwalski 2015-01-31 17:39:48 UTC
Created attachment 112997 [details]
dmesg with the latest patch, system is functional now

With the V3 patch system boots and is functional.
A secondary problem could be investigated:
radeon 0000:01:00.0: disabling GPU acceleration

This problem was expected, and probably deserves a separate bug...
Comment 14 Woody Suwalski 2015-01-31 17:41:43 UTC
The V3 patch permits to boot to X (albait with acceleration turned off)
Comment 15 Woody Suwalski 2015-02-11 00:30:56 UTC
Fixed in kernel 3.19


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.